# ff

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build_and_push.yaml
crates/ff/: Cargo.toml
crates/ff/src/: api.rs  app.rs  auth.rs  config.rs  domain.rs  lib.rs  main.rs
crates/ff/src/api/: handlers.rs  mod.rs  models.rs  routers.rs
crates/ff/src/utils/: config.rs  mod.rs
crates/fflags/: Cargo.toml
crates/fflags/src/: adapters.rs  app.rs  domain.rs  lib.rs  main.rs
crates/fflags/src/api/: handlers.rs  mod.rs  models.rs  routers.rs
crates/fflags/src/auth/: jwt.rs  mod.rs  models.rs  repositories.rs  service.rs
crates/fflags/src/utils/: config.rs
ff/src/: domain.rs  lib.rs
