[package]
name = "fflags"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.8.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "derive", "macros", "migrate", "json"] }
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
tower-http = { version = "0.6.8", features = ["catch-panic"] }
tower = { version = "0.5.2", features = ["timeout", "retry", "tokio", "tracing", "util", "limit", "reconnect", "hedge"] }
figment = { version = "0.10", features = ["toml", "env"] }
clap = { version = "4.5.54", features = ["derive"] }
